--- a/index.html
+++ b/index.html
@@ -272,29 +272,29 @@
       >
         <!-- Section Title -->
         <div class="bg-[#F1F1F1] w-full px-0 md:px-8 pb-6 overflow-hidden">
-          <div
-            class="flex items-center justify-between gap-6 md:gap-[100px] w-full"
-          >
-            <!-- Left faint title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3] whitespace-nowrap"
-            >
-              Services We Offer
-            </h2>
+          <div class="flex justify-center">
+            <div class="inline-flex items-center whitespace-nowrap">
+              <!-- Left faint -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+              >
+                Services We Offer
+              </span>
 
-            <!-- Main center title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A] text-center whitespace-nowrap"
-            >
-              Services We Offer
-            </h2>
+              <!-- Center main -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A] mx-6 md:mx-[100px]"
+              >
+                Services We Offer
+              </span>
 
-            <!-- Right faint title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3] whitespace-nowrap"
-            >
-              Services We Offer
-            </h2>
+              <!-- Right faint -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+              >
+                Services We Offer
+              </span>
+            </div>
           </div>
         </div>
 
@@ -665,29 +665,29 @@
         <div
           class="w-full px-0 md:px-8 pb-8 pt-12 md:pt-[100px] overflow-hidden"
         >
-          <div
-            class="flex items-center justify-between gap-6 md:gap-[100px] w-full"
-          >
-            <!-- Left faint title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3] whitespace-nowrap"
-            >
-              Contacts
-            </h2>
+          <div class="flex justify-center">
+            <div class="inline-flex items-center whitespace-nowrap">
+              <!-- Left faint -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+              >
+                Contacts
+              </span>
 
-            <!-- Main center title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A] text-center whitespace-nowrap"
-            >
-              Contacts
-            </h2>
+              <!-- Center main -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A] mx-6 md:mx-[350px]"
+              >
+                Contacts
+              </span>
 
-            <!-- Right faint title -->
-            <h2
-              class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3] whitespace-nowrap"
-            >
-              Contacts
-            </h2>
+              <!-- Right faint -->
+              <span
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+              >
+                Contacts
+              </span>
+            </div>
           </div>
         </div>
 
