--- a/index.html
+++ b/index.html
@@ -333,165 +333,167 @@
 
       <section class="w-full bg-[#F1F1F1]">
         <div
-          class="bg-white w-full mx-auto px-4 pt-8 md:pt-25 md:px-8 rounded-t-[32px] overflow-hidden"
+          class="bg-white w-full mx-auto pt-8 md:pt-25 rounded-t-[32px] overflow-hidden"
         >
-          <!-- Top: heading + paragraph -->
-          <div class="flex flex-col md:flex-row gap-6 mb-12 md:mb-[100px]">
-            <!-- Heading -->
-            <div class="md:max-w-[915px]">
-              <h2
-                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A]"
-              >
-                We’re a team of builders, designers, and thinkers
-              </h2>
+          <div class="max-w-[1569px] mx-auto px-4 md:px-8">
+            <!-- Top: heading + paragraph -->
+            <div class="flex flex-col md:flex-row gap-6 mb-12 md:mb-[100px]">
+              <!-- Heading -->
+              <div class="md:max-w-[915px]">
+                <h2
+                  class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#2A2A2A]"
+                >
+                  We’re a team of builders, designers, and thinkers
+                </h2>
+              </div>
+
+              <!-- Paragraph -->
+              <div class="md:max-w-[630px]">
+                <p
+                  class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6] mb-4"
+                >
+                  Originally formed as a spinoff of an enterprise software
+                  consultancy, we’ve grown into a focused, fast-moving company
+                  working in close partnership with one of the world’s most
+                  recognized brands.
+                </p>
+                <p
+                  class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6] mb-4"
+                >
+                  While we don’t advertise our clients, the systems we build are
+                  used by millions.
+                </p>
+                <p
+                  class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6]"
+                >
+                  We value craft, iteration, collaboration, and shipping code
+                  that matters.
+                </p>
+              </div>
             </div>
 
-            <!-- Paragraph -->
-            <div class="md:max-w-[630px]">
-              <p
-                class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6] mb-4"
-              >
-                Originally formed as a spinoff of an enterprise software
-                consultancy, we’ve grown into a focused, fast-moving company
-                working in close partnership with one of the world’s most
-                recognized brands.
-              </p>
-              <p
-                class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6] mb-4"
-              >
-                While we don’t advertise our clients, the systems we build are
-                used by millions.
-              </p>
-              <p
-                class="font-Manrope text-[16px] md:text-[20px] text-[#2A2A2A] leading-[1.6]"
-              >
-                We value craft, iteration, collaboration, and shipping code that
-                matters.
-              </p>
-            </div>
-          </div>
-
-          <!-- Our Expertise label -->
-          <div class="mb-6">
-            <p class="font-Manrope text-[20px] font-semibold text-[#FE6D36]">
-              Our Expertise
-            </p>
-          </div>
-
-          <!-- Expertise list -->
-          <div
-            class="flex flex-col divide-y divide-[#7F8BA3] border-b-[#7F8BA3] border-b mb-12 md:mb-25"
-          >
-            <!-- 1 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                01
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                Machine Learning &amp; LLM Applications
+            <!-- Our Expertise label -->
+            <div class="mb-6">
+              <p class="font-Manrope text-[20px] font-semibold text-[#FE6D36]">
+                Our Expertise
               </p>
             </div>
 
-            <!-- 2 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                02
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                CRM &amp; Customer Experience Tools
-              </p>
-            </div>
+            <!-- Expertise list -->
+            <div
+              class="flex flex-col divide-y divide-[#7F8BA3] border-b-[#7F8BA3] border-b mb-12 md:mb-25"
+            >
+              <!-- 1 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  01
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  Machine Learning &amp; LLM Applications
+                </p>
+              </div>
 
-            <!-- 3 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                03
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                UI/UX &amp; Application Design
-              </p>
-            </div>
+              <!-- 2 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  02
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  CRM &amp; Customer Experience Tools
+                </p>
+              </div>
 
-            <!-- 4 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                04
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                API Development &amp; Integration
-              </p>
-            </div>
+              <!-- 3 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  03
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  UI/UX &amp; Application Design
+                </p>
+              </div>
 
-            <!-- 5 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                05
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                Marketing Automation Solutions
-              </p>
-            </div>
+              <!-- 4 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  04
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  API Development &amp; Integration
+                </p>
+              </div>
 
-            <!-- 6 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                06
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                Ticketing &amp; Support Platforms
-              </p>
-            </div>
+              <!-- 5 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  05
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  Marketing Automation Solutions
+                </p>
+              </div>
 
-            <!-- 7 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                07
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                Enterprise B2B Software
-              </p>
-            </div>
+              <!-- 6 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  06
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  Ticketing &amp; Support Platforms
+                </p>
+              </div>
 
-            <!-- 8 -->
-            <div class="flex items-center gap-6 py-[18px] md:py-8">
-              <span
-                class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
-              >
-                08
-              </span>
-              <p
-                class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
-              >
-                3rd-Party Integration Services
-              </p>
+              <!-- 7 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  07
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  Enterprise B2B Software
+                </p>
+              </div>
+
+              <!-- 8 -->
+              <div class="flex items-center gap-6 py-[18px] md:py-8">
+                <span
+                  class="w-8 font-Manrope text-[16px] md:text-[24px] text-[#7F8BA3] font-light"
+                >
+                  08
+                </span>
+                <p
+                  class="font-Manrope text-[20px] md:text-[40px] font-semibold text-[#2A2A2A] leading-[1.6]"
+                >
+                  3rd-Party Integration Services
+                </p>
+              </div>
             </div>
           </div>
         </div>
