--- a/join-us.html
+++ b/join-us.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- Header Section -->
-    <header>
+    <header class="fixed top-0 left-0 w-full z-50 h-20">
       <div class="header-container bg-[#F1F1F1] w-full">
         <!-- Navbar -->
         <nav class="w-full">
@@ -24,17 +24,17 @@
             <!-- Center Nav Links -->
             <div class="hidden w-[460px] md:flex md:justify-center gap-8">
               <a
-                href="index.html"
+                href="/"
                 class="text-[#2A2A2A] font-Manrope font-bold text-base"
                 >Home</a
               >
               <a
-                href="how-we-work.html"
+                href="/#services-we-offer"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Services</a
               >
               <a
-                href="how-we-work.html"
+                href="/#who-we-are"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Who We Are</a
               >
@@ -44,7 +44,7 @@
                 >Careers</a
               >
               <a
-                href="contact.html"
+                href="/#contact-us"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Contacts</a
               >
@@ -78,19 +78,19 @@
         >
           <div class="flex flex-col items-center gap-6 w-full">
             <a
-              href="index.html"
+              href="/"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Home
             </a>
             <a
-              href="index.html"
+              href="/#services-we-offer"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Services
             </a>
             <a
-              href="how-we-work.html"
+              href="/#who-we-are"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Who We Are
@@ -102,7 +102,7 @@
               Careers
             </a>
             <a
-              href="contact.html"
+              href="/#contact-us"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Contacts
@@ -122,7 +122,7 @@
     <!--
       Join Us Hero Section Starts
       -->
-    <section class="px-0 md:px-8 bg-[#F1F1F1]">
+    <section class="px-0 md:px-8 bg-[#F1F1F1] mt-20">
       <div
         class="w-full rounded-none md:rounded-[32px] overflow-hidden relative"
       >
