--- a/join-us.html
+++ b/join-us.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pacific Programming Tech</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <!-- Header Section -->
@@ -933,7 +937,7 @@
         <div class="flex flex-col gap-5.5 md:gap-8 md:[max-w-276px]">
           <img
             src="/coast_logo_white.png"
-            alt="Pacific Logo"
+            alt="Coast Interactive Logo"
             class="h-5 w-[200px] object-contain"
           />
           <a
@@ -967,14 +971,14 @@
         >
           <div class="flex flex-col gap-6">
             <a href="/" class="hover:underline">Home</a>
-            <a href="/contacts" class="hover:underline">Contacts</a>
+            <a href="/#contact-us" class="hover:underline">Contacts</a>
           </div>
           <div class="flex flex-col gap-6">
-            <a href="/careers" class="hover:underline">Careers</a>
-            <a href="/about" class="hover:underline">Who We Are</a>
+            <a href="/join-us.html" class="hover:underline">Careers</a>
+            <a href="/#who-we-are" class="hover:underline">Who We Are</a>
           </div>
           <div>
-            <a href="/services" class="hover:underline">Services</a>
+            <a href="/#services-we-offer" class="hover:underline">Services</a>
           </div>
         </div>
 
@@ -1012,7 +1016,7 @@
     <!--
     Footer Section Ends
     -->
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
