--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <!-- SLIDE 1 -->
                 <div class="swiper-slide">
                   <div
-                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/services-bg-mobile.png')] md:bg-[url('/services-bg.png')] bg-cover bg-center bg-no-repeat"
+                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-ai.jpg')] md:bg-[url('/ai.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
                       class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
@@ -349,7 +349,7 @@
                 <!-- SLIDE 2 (same for now) -->
                 <div class="swiper-slide">
                   <div
-                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/services-bg-mobile.png')] md:bg-[url('/services-bg.png')] bg-cover bg-center bg-no-repeat"
+                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-integration.jpg')] md:bg-[url('/integration.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
                       class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
@@ -373,7 +373,7 @@
                 <!-- SLIDE 3 -->
                 <div class="swiper-slide">
                   <div
-                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/services-bg-mobile.png')] md:bg-[url('/services-bg.png')] bg-cover bg-center bg-no-repeat"
+                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-design.jpg')] md:bg-[url('/design.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
                       class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
@@ -397,7 +397,7 @@
                 <!-- SLIDE 4 -->
                 <div class="swiper-slide">
                   <div
-                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/services-bg-mobile.png')] md:bg-[url('/services-bg.png')] bg-cover bg-center bg-no-repeat"
+                    class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-platforms.jpg')] md:bg-[url('/platforms.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
                       class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
